syntax = "proto3";

package protobuf;

option go_package = "github.com/vectorman1/analysis/analysis-api/infrastructure/proto";

message Currency {
  uint64 ID = 1;
  string Code = 2;
  string LongName = 3;
}

message Symbol {
  uint64 ID = 1;
  uint64 CurrencyID = 2;
  Currency Currency = 3;

  string ISIN = 4;
  string Identifier = 5;
  string Name = 6;
  float MinimumOrderQuantity = 7;
  string MarketName = 8;
  string MarketHoursGMT = 9;

  int64 CreatedAt = 12;
  int64 UpdatedAt = 13;
  int64 DeletedAt = 14;
}

message Symbols {
  repeated Symbol Symbols = 1;
}

message GetRequest {
}

service Trading212Service {
  rpc GetUpdatedSymbols (Symbols) returns (stream Symbol) {}
  rpc GetSymbols (GetRequest) returns (stream Symbol) {}
}
